Signin - fixed positioning on create & signin - fixed overflow on page - removed borders on left, right and top input - fixed content naming

--- a/hey-team/src/components/login/styles.css
+++ b/hey-team/src/components/login/styles.css
@@ -4,7 +4,7 @@
     padding-top: 210px;
     padding-left: 15%;
 
-    padding-bottom: 17%;
+    padding-bottom: 20%;
     background-color: white;
     /* background: linear-gradient(to bottom, rgb(29, 117, 199), rgb(43, 62, 73)) */
 }
@@ -13,13 +13,17 @@
 #signin-form > input
 {
     margin-left: 10px;
+    border-top: none;
+    border-left: none;
+    border-right: none;
 }
 
 .card-dull  
 {     
     box-shadow: 0 2px 2px 0 rgba(43, 43, 43, 0.151), 0 3px 1px -2px rgba(34, 34, 34, 0.082), 0 1px 5px 0 rgba(31, 31, 31, 0.13);  
     padding: 30px;  
-    height: 500px;
+    padding-top: 45px !important;
+    height: 460px;
 }
 
 .blue-link
@@ -38,7 +42,7 @@
     box-shadow: 0 2px 2px 0 rgba(43, 43, 43, 0.151), 0 3px 1px -2px rgba(34, 34, 34, 0.082), 0 1px 5px 0 rgba(31, 31, 31, 0.13);  
     color: #fff;
     height: 40px;
-    width: 80px;
+    width: 90px;
 }
 .light-blue-btn:hover
 {
@@ -52,6 +56,8 @@
     font-weight: 700;
     font-size: 2em;
     padding: 0px;
+
+    line-height: 1.3333;
 }
 .logo-blue
 {
@@ -60,13 +66,25 @@
     font-weight: 700;
     font-size: 2em;
     padding: 0px;
+
+    line-height: 1.3333;
+}
+
+#create-account
+{
+    margin-left: -25px;
 }
 
 .heading
 {   
-    font-weight: 520;
-    font-size: 1.2em;
-    padding: 0px;
+    font-family: 'Google Sans',arial,sans-serif;
+    padding-bottom: 0;
+    padding-top: 16px;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 1.3333;
+    margin-bottom: 0;
+    margin-top: 0;
 }
 
 .form-error {
@@ -114,5 +132,15 @@
     html
     {
         background-color: white;
+    }
+    .light-blue-btn
+    {
+        width: 200px;
+    }
+    
+    #create-account
+    {
+        margin-top: 20px;
+        margin-left: 0px !important;
     }
 }
